fix(enhancedTable): record count and title cut off with ellipsis (#81)

--- a/enhancedTable/main.scss
+++ b/enhancedTable/main.scss
@@ -47,20 +47,14 @@ md-datepicker>div {
 }
 
 .rv-record-count {
-    margin: 0;
-    overflow: hidden;
-}
-
-.title-container {
-    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    max-width: 75%;
+    width: 100%;
+    overflow: hidden;
 }
 
-.table-title {
-    margin: 0;
-    max-width: 100%;
+.md-title {
+    display: block !important;
 }
 
 .table-control {
